--- a/IE6/chrome/userChrome.css
+++ b/IE6/chrome/userChrome.css
@@ -39,3 +39,77 @@
 		padding: 0 !important;
 	}
 }
+.titlebar-close, .titlebar-restore, .titlebar-min, .titlebar-max{
+	width: fit-content !important;
+	height: fit-content !important;
+	padding: 0px !important;
+	background-color: transparent !important;
+}
+
+.titlebar-close{
+	padding-right: 4px !important;
+}
+
+.titlebar-close > .toolbarbutton-icon, .titlebar-close:hover > .toolbarbutton-icon, .titlebar-close:active > .toolbarbutton-icon, .titlebar-max > .toolbarbutton-icon, .titlebar-max:hover > .toolbarbutton-icon, .titlebar-max:active > .toolbarbutton-icon, .titlebar-min > .toolbarbutton-icon, .titlebar-min:hover > .toolbarbutton-icon, .titlebar-min:active > .toolbarbutton-icon, .titlebar-restore > .toolbarbutton-icon, .titlebar-restore:hover > .toolbarbutton-icon, .titlebar-restore:active > .toolbarbutton-icon{
+	width: fit-content !important;
+	height: fit-content !important;
+	transition: filter 0.1s ease !important;
+}
+
+.titlebar-close > .toolbarbutton-icon{
+	list-style-image: url("images/aeroClose.png") !important;
+}
+
+.titlebar-close:hover > .toolbarbutton-icon{
+	list-style-image: url("images/aeroCloseHover.png") !important;
+	filter: drop-shadow(0px 0px 5px rgb(255, 65, 22)) !important;
+}
+
+.titlebar-close:active > .toolbarbutton-icon{
+	list-style-image: url("images/aeroCloseActive.png") !important;
+}
+
+.titlebar-max > .toolbarbutton-icon{
+	list-style-image: url("images/aeroMaximize.png") !important;
+}
+
+.titlebar-max:hover > .toolbarbutton-icon{
+	list-style-image: url("images/aeroMaximizeHover.png") !important;
+	filter: drop-shadow(0px 0px 5px rgb(0, 150, 255)) !important;
+}
+
+.titlebar-max:active > .toolbarbutton-icon{
+	list-style-image: url("images/aeroMaximizeActive.png") !important;
+}
+
+.titlebar-min > .toolbarbutton-icon{
+	list-style-image: url("images/aeroMinimize.png") !important;
+}
+
+.titlebar-min:hover > .toolbarbutton-icon{
+	list-style-image: url("images/aeroMinimizeHover.png") !important;
+	filter: drop-shadow(0px 0px 5px rgb(0, 150, 255)) !important;
+}
+
+.titlebar-min:active > .toolbarbutton-icon{
+	list-style-image: url("images/aeroMinimizeActive.png") !important;
+}
+
+.titlebar-restore > .toolbarbutton-icon{
+	list-style-image: url("images/aeroRestore.png") !important;
+}
+
+.titlebar-restore:hover > .toolbarbutton-icon{
+	list-style-image: url("images/aeroRestoreHover.png") !important;
+	filter: drop-shadow(0px 0px 5px rgb(0, 150, 255)) !important;
+}
+
+.titlebar-restore:active > .toolbarbutton-icon{
+	list-style-image: url("images/aeroRestoreActive.png") !important;
+}
+
+.titlebar-button > .toolbarbutton-icon{
+	appearance: none;
+	background-color: transparent;
+}
+
